fix: Drawer and Modal, Overlay z-indexes

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -26,8 +26,9 @@
     --sidebar-width: 300px;
     --sidebar-width-collapsed: 80px;
 
-    // z-indexes
+    // z - Индексы
     --modal-z-index: 1000;
+    --overlay-z-index: 100;
 
     // Colours
     --overlay-color: rgba(0 0 0 / 60%);
